--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,16 @@ spring.application.name=Task
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/task
+
+#spring.redis.host=localhost
+#spring.redis.port=6379
+
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSql
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+
+
+spring.cache.type = redis
+spring.cache.redis.cache-null-values=true
