--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/task
 #spring.redis.port=6379
 
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQL
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
