--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=Task
 
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/task
+spring.datasource.url=jdbc:postgresql://localhost:5432/application
 
 #spring.redis.host=localhost
 #spring.redis.port=6379
 
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQL
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQL
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
@@ -17,3 +17,6 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.cache.type = redis
 spring.cache.redis.cache-null-values=true
+
+jwt.token.lifeTime.day = 10
+jwt.token.secret = application
