--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.cache.redis.cache-null-values=true
 
 jwt.token.lifeTime.day = 10
 jwt.token.secret = application
+
+aws.access.key=AKIA6GBMECIBVARLBB27
+aws.secret.key=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
+aws.s3.bucket=myfirstbucketjlet4uk
