add logging throw aspcet and configure logback

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,23 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.12.470</version>
         </dependency>
+<!--logging-->
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-api</artifactId>-->
+<!--            <version>1.7.32</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ch.qos.logback</groupId>-->
+<!--            <artifactId>logback-core</artifactId>-->
+<!--            <version>1.3.5</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ch.qos.logback</groupId>-->
+<!--            <artifactId>logback-classic</artifactId>-->
+<!--            <version>1.3.5</version>-->
+<!--        </dependency>-->
+<!--logging-->
 
         <dependency>
             <groupId>com.sun.mail</groupId>
