--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/application
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQL
 
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 
 
 spring.cache.type = redis
@@ -21,6 +21,8 @@ spring.cache.redis.cache-null-values=true
 jwt.token.lifeTime.day = 10
 jwt.token.secret = application
 
-aws.access.key=AKIA6GBMECIBVARLBB27
-aws.secret.key=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
+aws.access.key=${AWS_ACCESS_KEY:}
+aws.secret.key=${AWS_SECRET_KEY:}
 aws.s3.bucket=myfirstbucketjlet4uk
+
+
