--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/application
 #spring.jpa.properties.hibernate.show_sql=true
 
 
+smtpSettings.host = smtp.yandex.ru
+smtpSettings.port = 465
+smtpSettings.login = classroomkrsu@yandex.ru
+smtpSettings.password = zllfgbsvgtbgdcos
+smtpSettings.senderName = Classroom KRSU
+
+
 spring.cache.type = redis
 spring.cache.redis.cache-null-values=true
 
