remove access.key and secret.key from properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ spring.cache.redis.cache-null-values=true
 jwt.token.lifeTime.day = 10
 jwt.token.secret = application
 
-aws.access.key=AKIA6GBMECIBVARLBB27
-aws.secret.key=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
+aws.access.key=${AWS_ACCESS_KEY:}
+aws.secret.key=${AWS_SECRET_KEY:}
 aws.s3.bucket=myfirstbucketjlet4uk
